# CollectorRust

./: Collector.sln
Collector/: Collector.csproj  Game1.cs  Main.cs  Program.cs  Restrictions.cs
Collector/Content/: Content.mgcb  Palette.aseprite
Collector/LegacyJava/Collector/: Main.java
Collector/LegacyJava/Collector/Dimension/: Chunks.java  Inventory.java  WorldRenderer.java
Collector/LegacyJava/Collector/UI/: InventoryInterface.java  MiniMap.java
Collector/OLD/LegacyJava/Collector/: Restrictions.java
Collector/OLD/LegacyJava/Collector/Character/: Mouse.java  Player.java
Collector/OLD/LegacyJava/Collector/Dimension/: Block.java  BlockMaterials.java  ItemStack.java  World.java
Collector/OLD/LegacyJava/Collector/ThirdPartyCode/: OpenSimplexNoise.java
Collector/OLD/LegacyJava/Collector/UI/: GUI.java
Collector/src/Character/: Collision.cs  InputController.cs  InputController.java  Inventory.cs  Mouse.cs  Player.cs  PlayerMouse.cs
Collector/src/Dimension/: Autotiling.cs  Block.cs  BlockMaterials.cs  Blocks.cs  Chunks.cs  Collision.cs  Inventory.cs  ItemStack.cs  WangTile.cs  World.cs  WorldRenderer.cs
Collector/src/ThirdPartyCode/: OpenSimplexNoise.cs  QuadTree.cs
Collector/src/UI/: GUI.cs
CollectorMono/Collector/: Collector.csproj  Main.cs  Program.cs  Restrictions.cs
CollectorMono/Collector/src/Character/: Collision.cs  Player.cs
CollectorMono/Collector/src/Dimension/: Blocks.cs  World.cs  WorldRenderer.cs
CollectorRust/: Cargo.toml  main  main.rs
CollectorRust/src/: state.rs
