[package]
name = "collector_rust"
version = "0.0.1"
authors = ["Harkamal Randhawa <harkamalsr@gmail.com>","Hilmar Wiegand <me@hwgnd.de>", "Amethyst Foundation <contact@amethyst.rs>"]
edition = "2018"

[dependencies]
amethyst = {  version = "0.15.3" , features = ["no-slow-safety-checks"]}
log = { version = "0.4.11", features = ["serde"] }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
